feat: GET /order/passenger/spot/all 新增參數，選擇是否只回傳有乘客的spot
